fix(Dimensions): hide overflow as reference object can go out of bound

--- a/Dimensions/styles.css
+++ b/Dimensions/styles.css
@@ -6,7 +6,7 @@
 	padding: var(--space-md);
 	font-size: var(--font-size-small);
 	line-height: var(--line-height-xx-small);
-	overflow: visible;
+	overflow: hidden;
 }
 
 .template-dimensions-label {
